# handlers/DefaultService.js
@@ -2,6 +2,7 @@ const cp = require('child_process');
 
 /* eslint-disable no-unused-vars */
 const Service = require('./Service');
+const logger = require('./logger');
 
 /**
  * Execute simple shell command (async wrapper).
@@ -11,11 +12,11 @@ const Service = require('./Service');
 async function sh(cmd) {
   return new Promise(function (resolve, reject) {
     cp.exec(cmd, (err, stdout, stderr) => {
-      if (err) {
-        reject(err);
-      } else {
+      // if (err) {
+      //   reject(err);
+      // } else {
         resolve({ stdout, stderr });
-      }
+      // }
     });
   });
 }
@@ -28,10 +29,43 @@ async function sh(cmd) {
 const getSnapshots = () => new Promise(
   async (resolve, reject) => {
     try {
-      let { stdout } = await sh('restic snapshots');
+      let { stdout, stderr } = await sh('restic snapshots --json');
+      logger.info(`stdout: ${stdout}`)
+      logger.info(`stderr: ${stderr}`)
+      let stdoutJSON = JSON.parse(stdout);
+      resolve(Service.successResponse(stdoutJSON));
+    } catch (e) {
+      reject(Service.rejectResponse(
+        e.message || 'Invalid input',
+        e.status || 405,
+      ));
+    }
+  },
+);
+
+/**
+* Executes an restore based on the **short_id**
+*
+* shortId String Snapshot id Query Parameter.
+* returns List
+* */
+const restoreSnapshot = ({ shortId }) => new Promise(
+  async (resolve, reject) => {
+    try {
+      let { stdout, stderr } = await sh(`restic restore ${shortId} --target /`);
+      logger.info(`stdout: ${stdout}`)
+      logger.info(`stderr: ${stderr}`)
+      if(stderr){
+        if(stderr.includes('no matching ID found')){
+          // logger.info(`no matching ID found`)
+          reject(Service.rejectResponse(
+            'Snapshot Id not found',
+            404,
+          ));
+        }
+      }
       resolve(Service.successResponse({
-        // result: stdout
-        result: 'nice!!'
+        shortId,
       }));
     } catch (e) {
       reject(Service.rejectResponse(
@@ -44,4 +78,5 @@ const getSnapshots = () => new Promise(
 
 module.exports = {
   getSnapshots,
+  restoreSnapshot
 };
