# server/services/DefaultService.js
@@ -4,7 +4,7 @@ const Service = require('./Service');
 /**
 * List all snapshots 
 *
-* returns String
+* returns List
 * */
 const getSnapshots = () => new Promise(
   async (resolve, reject) => {
@@ -19,7 +19,28 @@ const getSnapshots = () => new Promise(
     }
   },
 );
+/**
+* Executes an restore based on the **short_id** 
+*
+* shortId String Snapshot id Query Parameter.
+* returns List
+* */
+const restoreSnapshot = ({ shortId }) => new Promise(
+  async (resolve, reject) => {
+    try {
+      resolve(Service.successResponse({
+        shortId,
+      }));
+    } catch (e) {
+      reject(Service.rejectResponse(
+        e.message || 'Invalid input',
+        e.status || 405,
+      ));
+    }
+  },
+);
 
 module.exports = {
   getSnapshots,
+  restoreSnapshot,
 };
